setado os links

--- a/ds1m-b/viniciusNunes/css/style.css
+++ b/ds1m-b/viniciusNunes/css/style.css
@@ -11,6 +11,10 @@
   --fonte-titulo__trama: 'Barlow Condensed', sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -23,9 +27,10 @@ header {
   height: 50px;
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: flex-end;
   z-index: 999;
-  position: fixed;
+  position: absolute;
 }
 
 main {
