--- a/ds1m-b/viniciusNunes/css/footer.css
+++ b/ds1m-b/viniciusNunes/css/footer.css
@@ -1,89 +1,17 @@
 footer {
-  /* background-color: ; */
   height: 100px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
 }
 
-.palavra-estatica {
+footer span {
+  font-weight: 400;
   color: var(--tertiary-color);
-  font-size: 1.5rem;
+  text-align: center;
 }
 
-.palavra-dinamica {
-  margin: 15px;
-  line-height: 50px;
-  height: 50px;
-  overflow: hidden;
-}
-.palavra-dinamica li {
+footer span a {
+  font-weight: 600;
   color: var(--secundary-color);
-  list-style: none;
-  font-size: 2rem;
-  left: 0;
-  position: relative;
-  top: 0;
-  animation: slide 4s steps(4) infinite;
-}
-
-.instagram {
-  caret-color: linear-gradient(
-    45deg,
-    #f09433 0%,
-    #e6683c 25%,
-    #dc2743 50%,
-    #cc2366 75%,
-    #bc1888 100%
-  );
-}
-
-.github {
-  color: #fff;
-  font-size: 2rem;
-  font-family: var(--fonte-geral);
-}
-
-.linkedin {
-  color: #0274b3;
-  font-size: 2rem;
-  font-family: var(--fonte-geral);
-}
-
-.whatsapp {
-  color: #25d165;
-  font-size: 2rem;
-  font-family: var(--fonte-geral);
-}
-
-@keyframes slide {
-  100% {
-    top: -200px;
-  }
-}
-
-.palavra-dinamica li span {
-  position: relative;
-}
-
-.palavra-dinamica li span::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  border-left: 2px solid var(--tertiary-color);
-  animation: typing 1s steps(10) infinite;
-  background: var(--primary-color);
-}
-
-.palavra-dinamica li span {
-  position: relative;
-}
-
-@keyframes typing {
-  100% {
-    left: 100%;
-    margin: 0 -35px 0 35px;
-  }
 }
