--- a/ds1m-b/viniciusNunes/css/responsividade.css
+++ b/ds1m-b/viniciusNunes/css/responsividade.css
@@ -74,7 +74,9 @@
   }
 
   .trama__description {
-    font-size: 1rem;
+    font-size: 0.9rem;
+    letter-spacing: 0;
+    font-weight: 400;
     width: 450px;
   }
 
