--- a/ds1m-b/paula-blesa/css/slider-images.css
+++ b/ds1m-b/paula-blesa/css/slider-images.css
@@ -5,10 +5,14 @@
 
 .mySlides-images img {
     vertical-align: middle;
-    width: 700px;
+    width: 500px;
     max-height: 600px;
+    justify-content: center;
 }
-
+.slideshow-container{
+    display: flex;
+    justify-content: center;
+}
 .slideshow {
     max-width: 1000px;
     position: relative;
@@ -18,21 +22,24 @@
 }
 
 .dots-images {
-    margin: 10px 0px;
+    margin: 13px 0px;
+    margin-left: 900px;
 }
 
 .dot-images {
     height: 15px;
     width: 15px;
     margin: 0 8px;
-    background-color: #bbb;
+    background-color: #F8E795;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+    justify-items: center;   
+
 }
 
 .active {
-    background-color: #717171;
+    background-color: #D2AC47;
 }
 
 .fade {
