reservas e localização finalizados

--- a/ds1t-b/claudioSousa/CSS/cardapio.css
+++ b/ds1t-b/claudioSousa/CSS/cardapio.css
@@ -2,7 +2,7 @@
     background-color: #000;
     width: 100%;
     display: grid;
-    grid-template-columns: 3fr 3fr 1fr;
+    grid-template-columns: 2fr 2fr 1fr;
     grid-template-rows: auto 1fr 1fr;
     grid-template-areas: 
     "title title foto"
@@ -11,7 +11,7 @@
     ;
 }
 
-.title{
+.ml{
     text-align: center;
     margin-left: 15vw;
 }
