--- a/ds1t-b/claudioSousa/CSS/nav.css
+++ b/ds1t-b/claudioSousa/CSS/nav.css
@@ -1,4 +1,4 @@
-a{
+li a{
     color: #fff;
     border-bottom: 4px solid transparent;
     transition: border-color 0.5s ;
@@ -11,7 +11,7 @@ a{
     font-size: 2rem;
 }
 
-a:hover{
+ li a:hover{
     transition: color 0.5s;
     color: #000;
     border-bottom: 4px solid #000;
