--- a/ds1t-b/claudioSousa/CSS/reservasELocalizacao.css
+++ b/ds1t-b/claudioSousa/CSS/reservasELocalizacao.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: grid;
     grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-areas: 
     "reservas"
     "localizacao";
@@ -10,16 +11,78 @@
 
 .reservas{
     grid-area: reservas;
+    text-align: center;
     background-image: url(../IMG/fundoReservas.png);
     background-size: cover;
     background-repeat: no-repeat;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    font-family: 'Lalezar', cursive;
+    font-size: 2rem;
     
 }
+
+.reservas-bg{
+    background-color: #0006;
+    border-radius: 54px;
+    width: 621px;
+    height: 288px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+    
+}
+
+.bt-reservas{
+    background-color: var(--primary-color) ;
+    padding: 5px;
+    width: 243px;
+    height: 43px;
+    border-radius: 20px;
+    font-family: 'Lalezar', cursive;
+    font-size: 2rem;
+    text-align: center;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bt-reservas:hover{
+    background-color: #fff;
+    color: var(--primary-color);
+}
+
+
 
 .localizacao{
     grid-area: localizacao;
     background-image: url(../IMG/fundoLocalizacao.png);
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.localizacao-bg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0006;
+    font-family: 'Lalezar', cursive;
+    font-size: 2rem;
+    gap: 10px;
+    text-align: center;
+    width: 1138px;
+    height: 275px;
+   
+
+    
 }
