--- a/ds1m-a/genivania/css/home.css
+++ b/ds1m-a/genivania/css/home.css
@@ -6,11 +6,11 @@
     background-repeat: no-repeat;
     background-size: cover;
     padding-bottom: 86px;
-
+    box-shadow: inset 0px -40px 40px #181068;
 }
 .title{
     font-family: 'Eagle Lake', cursive;
-    font-size: 7.25rem;
+    font-size: 15rem;
     background-image: linear-gradient( #1602F9 , #00C9F5);
     background-clip: text;
     -webkit-background-clip: text;
@@ -18,7 +18,9 @@
     
 }
 .profile__text{
-    font-size: 1rem;
+    font-size: 3rem;
+    font-family: 'avatar';
+    font-weight: 400;
     
 }
 .fundo{
