--- a/ds1m-a/genivania/css/menu.css
+++ b/ds1m-a/genivania/css/menu.css
@@ -1,8 +1,9 @@
 .menu{
     display: flex;
-    gap: 72px;
-    font-size: 1.5rem;
-    font-family: 'Eagle Lake', cursive;
+    gap: 90px;
+    font-size: 6rem;
+    font-family: 'avatar';
+    font-weight: 400;
     color: var(--primary-color);
 }
 .menu li{
