--- a/ds1m-a/genivania/css/sinopse.css
+++ b/ds1m-a/genivania/css/sinopse.css
@@ -7,32 +7,42 @@
     grid-template-rows: auto 1fr;
     grid-template-columns: 1fr 1fr;
     place-items: center;
-    gap: 50px;
-    background-image: url(../img/pandora\ 1.png);
+    background-image: url(../img/azul.gif);
     background-repeat: no-repeat;
     background-size: cover;
+    box-shadow: inset 0px -40px 40px #181068;
+   
+    
 }
+.card_container{
+    display: flex;
+    flex-direction:initial;
+    margin-left: 30rem;
+    width: 1500px;
+    justify-content: space-between;
+    gap:36px;
+    align-items: center;
+}
+
 .section-title{
     grid-area: title;
     font-family: 'Eagle Lake', cursive;
-    font-size: 8.25rem;
+    font-size: 14rem;
     background-image: linear-gradient( #1602F9 , #00C9F5);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;  
-    align-items: flex-end;
-    width: 800px;
-    display: flex;
-    
+    display: flex; 
 }
 .avatar{
     grid-area: avatar;
-    display: flex;
-    
+    display: flex;  
 }
 .description{
     grid-area: description;
-    font-size: 2.5rem;
+    font-size: 4rem;
+    font-family: 'avatar';
+    font-weight: 400;
     width: 1200px;
-    font-family: 'Abel', sans-serif;
+   
 }
