--- a/ds1t-b/one-page-x/css/descricao-filme.css
+++ b/ds1t-b/one-page-x/css/descricao-filme.css
@@ -1,60 +1,61 @@
 .descricao-filme{
     display: grid;
     grid-template-areas: 
-    "frase pearl"
-    "descricao-movie pearl";
-    grid-template-columns: 1fr  518px;
-    
+    "diretor-filme frase pearl nome-filme"
+    "diretor-filme descricao-movie pearl nome-filme";
+    grid-template-columns: 19px 1fr 518px 19px;
 }
 .frase-efeito{
     grid-area: frase;
     justify-self: center;
+    place-content: center;
+    place-self: center;
     font-weight: 700;
     font-family: 'Rubik', sans-serif;
     font-size: 3rem;
     font-style: italic;
-    margin-left: 33rem;
+    justify-content: center;
 }
-.i{
+.i {
     color: #330606;
 }
-.am{
+.am {
     color: #641515;
 }
-.a{
+.a {
     color: #501919;
 }
-.star{
+.star {
     color: #FF0000;
 }
 .descricao{
     grid-area: descricao-movie;
-    display: flex;
-    flex-direction: column;
-    place-content: center;
+    
 }
-.sobre-o-filme{
-    font-family: 'Inter', sans-serif;
-}
-.titulo{
+.titulo {
     font-size: 4rem;
     font-weight: 600;
     font-family: 'Rubik', sans-serif;
     font-style: italic;
     color: #471818;
     margin-left: 144px;
+    margin-top: 50px;
 }
-.lançamento{
+.lançamento {
     font-size: 1rem;
     color: #FF0000;
-    margin-left: 311px;
+    margin-left: 355px;
 }
-.sobre-o-filme{
+.sobre-o-filme {
     font-family: 'Inter', sans-serif;
     margin-left: 245px;
-    margin-right: 415px;
+    margin-right: 515px;
 }
-.alugue-agora{
+.botao-alugue{
+    display: flex;
+    justify-content: center;
+}
+.alugue-agora {
     display: flex;
     align-items: center;
     align-self: center;
@@ -66,23 +67,70 @@
     border-color: #91000A;
     color: #91000A;
     transition: 0.6s;
+    margin-top: 28px;
 }
-.alugue-agora:hover{
+.alugue-agora:hover {
     box-shadow: 0 0 8px #91000A,
         0 0 10px #91000A,
         0 0 20px #91000A;
 }
-.img-pearl{
+.img-pearl img{
     grid-area: pearl;
-    z-index: -1;
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    height: 980px;
+    width: 518px;
 }
 .nome-do-filme{
-    
-    
+    grid-area: nome-filme;
+    display: flex;
+    white-space: nowrap;
+    align-items: flex-start;
+    align-self: flex-start;
     color: #86150F;
+    transform: rotate(90deg);
 }
 .diretor{
-    
-    
+    grid-area: diretor-filme;
+    display: flex;
+    white-space: nowrap;
+    align-items: flex-start;
+    align-self: flex-start;
     color: #86150F;
+    transform: rotate(90deg);
+}
+@media (max-width: 960px) {
+    .descricao-filme{
+        height: 70rem;
+        display: flex;
+        flex-direction: column;
+        background-image: url(../img/img-pearl.png);
+        background-repeat: no-repeat;
+        background-size: 700px 1100px;
+    }
+    
+    .titulo{
+        margin-left: 29px;
+    }
+    .lançamento{
+        margin-left: 47px;
+    }
+    .sobre-o-filme {
+        font-family: 'Inter', sans-serif;
+        margin-left: 43px;
+        margin-right: 90px;
+    }
+    .img-pearl{
+        position: absolute;
+        z-index: -100;
+        opacity: 50%;
+
+    }
+    .nome-do-filme{
+        display: none;
+    }
+    .diretor{
+        display: none;
+    }
 }
