--- a/ds1t-b/one-page-x/css/home.css
+++ b/ds1t-b/one-page-x/css/home.css
@@ -41,7 +41,9 @@
         width: 35px;
 }
 @media (max-width: 960px) {
-
+    .home{
+        height: 45rem;
+    }
     .home img{
         max-width: 100%;
         max-height: 100%;
