--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
@@ -1,5 +1,18 @@
 .novidades{
     font-size: 2rem;
-    align-self: center;
-    padding-top: 156px;
+
+}
+.images-container{
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    gap: 20px;
+    padding-left: 20px;
+}
+.view-port{
+    position: absolute;
+    max-width:99vw ;
+    height: 600px;
+    overflow: hidden;
+    
 }
