--- a/ds1m-b/one-page-leticia/css/filmes.css
+++ b/ds1m-b/one-page-leticia/css/filmes.css
@@ -16,7 +16,7 @@
 .card-container{
     max-width: 1440px;
     display: flex;
-    width: 100%;
+    width: 100%; 
     flex-wrap: wrap; 
     justify-content: space-between;
     gap: 48px; 
@@ -26,16 +26,14 @@
     display: block; 
     position: relative;
     overflow: hidden;
-    /* border-top: 100%;
-    border-width: 5px;
-    border-color: var(--primary-color); */
+    border: 6px solid var(--primary-color);
 }
 
 .card::before{
     content: "Clique aqui para visualizar o filme";
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100%; 
+    height: 100%; 
     display: grid;
     place-content: center;
     background-color: azure;
