js do carrousel pronto

--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
@@ -11,8 +11,9 @@
 }
 .view-port{
     position: absolute;
-    max-width:99vw ;
+    max-width:100% ;
     height: 600px;
     overflow: hidden;
+    
     
 }
