--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/buttom.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/buttom.css
@@ -1,10 +1,28 @@
-button{
+#next{
     font-family: VCR_OSD_MONO;
     font-size: 64px;
     width: 64px;
-    height: 64px;
+    height: 400px;
     border: none;
     background-color: #0000;
     cursor: pointer;
     color: #fff;
+    box-shadow: inset -40px 0px 40px 0px black;
+}
+#prev{
+    font-family: VCR_OSD_MONO;
+    font-size: 64px;
+    width: 64px;
+    height: 400px;
+    border: none;
+    background-color: #0000;
+    cursor: pointer;
+    color: #fff;
+    box-shadow: inset 40px 0px 40px 0px black;
+}
+#prev:hover{
+    color: var(--select-color);
+}
+#next:hover{
+    color: var(--select-color);
 }
