--- a/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
+++ b/ds1m-b/Eduardo Ribeiro Pimenta/css/novidades.css
@@ -1,6 +1,20 @@
 .novidades{
     font-size: 2rem;
-
+    padding-top: 68px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.novidades .section-title{
+    padding-left: 148px;
+}
+.molde{
+    z-index: 0;
+    height: 400px;
+}
+.images{
+    position: absolute;
+    transform: translate(0px,9px);
 }
 .images-container{
     display: flex;
@@ -9,11 +23,27 @@
     gap: 20px;
     padding-left: 20px;
 }
+
 .view-port{
     position: absolute;
     max-width:100% ;
-    height: 600px;
+    height: 500px;
     overflow: hidden;
-    
-    
+}
+.arrows{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transform: translate(0px,0px);
+}
+.social{
+   display: flex;
+   flex-direction: row;
+   gap: 32px;
+   justify-content: center;
+   padding-top: 150px;
+   font-size: 64px;
+}
+.social a:hover{
+    color: var(--select-color);
 }
