slider de museu finalizado

--- a/ds1m-b/one-page-leticia/css/filmes.css
+++ b/ds1m-b/one-page-leticia/css/filmes.css
@@ -9,6 +9,7 @@
 .description{
     font-weight: lighter;
     text-align: justify;
+    /* align-items: center; */
     font-size: 1.65rem;
     line-height: 150%;
 }
