--- a/ds1m-b/one-page-leticia/css/museu.css
+++ b/ds1m-b/one-page-leticia/css/museu.css
@@ -1,32 +1,47 @@
 .museu{
+    max-width: 1200px;
     width: 100%;
     display: grid;
+    margin-top: 15%; 
     grid-template-areas: 
     "title title" 
-    "description slider"; 
+    "text slider"; 
     grid-template-rows: auto 1fr; 
     grid-template-columns: 1fr 1fr; 
     gap: 64px;
 }
 
-.description{
-    grid-area: description;
+.text{
+    grid-area: text;
     display: flex;
     flex-direction: column;
+    gap: 32px;
+    
+}
+.text__title{
+    font-size: 40px;
+}
+.text__description{
     text-align: justify;
     font-weight: lighter;
     font-size: 1.65rem;
+    width: 80%;
     line-height: 150%;
-    padding-left: 15%;
+    /* padding-left: 10%;  */
 }
 
-
-slider {
+.slider {
     grid-area: slider;
     display: flex;
-    margin: auto;
-    margin-top: 20px;
-    position: relative;
+    flex-direction: column;
+    /* margin: auto; */
+    /* margin-top: 20px; */
+    gap: 32px;
+    /* align-items: center; */
+    /* position: relative; */
+}
+.slider__title{
+    font-size: 40px;
 }
 
 .slider li {
@@ -69,6 +84,9 @@ slider {
 }
 .slider li:nth-child(4) label{
     left: 100px;
+}
+.slider li:nth-child(5) label{
+    left: 130px;
 }
 
 .slider li input:checked ~ img {
