--- a/ds1m-b/felipeflorencio/css/style.css
+++ b/ds1m-b/felipeflorencio/css/style.css
@@ -14,8 +14,7 @@ html {
    
 }
 html, body{
-    height: 100%;
-    width: 100%;
+  scroll-behavior: smooth;  
 }
 body {
     background-color: var(--body-color);
@@ -30,35 +29,13 @@ body {
 
 section {
     background-color: var(--section-color);
-    height: 94%;
+    height: 95vh;
     width: 85%;
     border-radius: 2px;
 }
-
-.home {
-    display: flex;
-    flex-direction: column;
-}
-.home__content{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 2%;
-    margin-left: 10%;
-    gap: 10%;
-}
-.home__index{
+.index{
     margin-left: 5%;
-    margin-bottom: 50px;
-}
-.cello{
-    width: 546px;
-    height: 705px;
-    
-}
-nav{
-    display: flex;
-    gap: 20px;
+    margin-bottom: 15%;
 }
 
 /* TABLET */
