--- a/ds1t-b/Projeto FF/historia.css
+++ b/ds1t-b/Projeto FF/historia.css
@@ -41,6 +41,7 @@
     align-items: center;
     width: 666px;
     height: 677px;
+    gap: 25px;
 }
 
 .texto{
@@ -54,4 +55,12 @@
     display: flex;
     align-items: center;
     color: #FFFFFF;
+}
+
+.imagem-introducao{
+    width: 100%;
+}
+
+.imagem-conclusao{
+    width: 100%;
 }
