--- a/ds1t-b/one-page-nike/css/black-friday.css
+++ b/ds1t-b/one-page-nike/css/black-friday.css
@@ -3,26 +3,112 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 64px;
+    gap: 20px;
+    align-items: center;
 }
 
 .faixa {
-    background-color: var(--primary-color);
     height: 10vh;
-    width: 130vh;
-    transform: rotate(-23deg);
+    width: 60%;
     font-size: 4rem;
-    color: #000;
-    z-index: -1;
+    align-items: center;
 }
 
-.card-container {
+.black-friday .logo {
+    align-items: center;
+}
+
+.black-friday .logo:hover {
+    text-shadow: 0 0 5px #FF0000, 0 0 6px #FF0000;
+}
+
+.title {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #FF0000;
+    font-size: 1em; color: #000000;
+    align-items: center;
+}
+
+.title {
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: #FF0000;
+    font-weight:bolder;
+    text-decoration:none !important
+}
+
+.title:hover {
+    text-shadow: 0 0 5px #FF0000, 0 0 6px #FF0000;
+}
+
+.img-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 48px;
+    gap: 30px;
 }
-.card {
+
+.img {
     position: relative;
     overflow: hidden;
+}
+
+.black-friday .images {
+    border: 2px solid #FF0000;
+}
+
+.description {
+    width: 150px;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.description-old-price {
+    width: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: #ffffff;
+    color: #000;
+    text-decoration: line-through;
+}
+
+.description-discount {
+    color: #14FF00;
+}
+
+.black-friday .img::before {
+    content: "Clique aqui para abrir o produto";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #0009;
+    display: grid;
+    place-content: center;
+    font-weight: 700;
+    transform: translateY(100%);
+    transition: transform .7s;
+}
+
+.black-friday .img:hover::before {
+    transform: translateY(0%);
+}
+
+.circulos-interacao {
+    display: flex;
+    gap: 20px;
+}
+
+.black-friday .circulo1 {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+}
+
+.black-friday .circulo2 {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: #ffffff;
 }
