--- a/ds1t-b/one-page-nike/css/style.css
+++ b/ds1t-b/one-page-nike/css/style.css
@@ -17,7 +17,7 @@ body {
 header {
     place-self: start center;
     grid-area: content;
-    max-width: 900px;
+    max-width: 930px;
     width: 100%;
     margin-top: 48px;
     z-index: 1;
@@ -35,14 +35,15 @@ main {
 
 section {
     height: 100vh;
-}
-
-.projetos {
     width: 100%;
 }
 
-.contato {
-    width: 100%;
+.basketball {
+    height: 100vh;
+}
+
+.follow-us {
+    height: 40vh;
 }
 
 footer{
@@ -52,6 +53,6 @@ footer{
     width: 100%;
     display: grid;
     place-content: center;
-    font-size: .75rem;
+    font-size: .85rem;
     border-top: 2px solid #fff;
 }
