--- a/ds1t-a/lohannes/css/style.css
+++ b/ds1t-a/lohannes/css/style.css
@@ -2,6 +2,10 @@ section{
     height: 100vh;
 }
 
+section:not(#home){
+    background: linear-gradient(90deg, #001131 29.69%, #002A7A 100%);
+}
+
 ::-webkit-scrollbar {
   width: 0px;
 }
@@ -14,16 +18,23 @@ body{
 header{
     grid-area: content;
     height: 100px;
-    background-color: #0000ff75;
+    background-color: #003f8783;
     z-index: 5;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    
+    position: fixed;
+    width: 100%;
     padding-left: 26px;
     padding-right: 26px;
     color: white;
+}
+
+.avatar-logo{
+    width: 9%;
+    max-width: 9%;
+    min-width: 150px;
 }
 
 main{
@@ -33,16 +44,7 @@ main{
     justify-content: center;
     align-items: center;
     width: 100%;
-}
-
-#home{
-    width: 100%;
-    background-color: rgb(255, 75, 75);
-}
-
-#oQueEAvatar{
-    width: 100%;
-    background-color: blue;
+    overflow: hidden;
 }
 
 #atla_Personagens{
@@ -68,4 +70,12 @@ main{
 footer{
     height: 100px;
     background-color: black;
+}
+
+@media (max-width:640px){
+    
+    .nick_logo{
+        display: none;
+    }
+
 }
