--- a/ds1m-a/genivania/css/personagem.css
+++ b/ds1m-a/genivania/css/personagem.css
@@ -3,9 +3,9 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 80px;
+    gap: 10px;
     background-image: url(../img/azul.gif);
-    box-shadow: inset 0px -40px 40px #0c0549;
+    box-shadow: inset 10px -100px 100px #181068;
     background-size: cover;
     grid-template-areas:
     "title title  "
@@ -17,7 +17,7 @@
 .title_personagem{
     grid-area: title;
     font-family: 'Eagle Lake', cursive;
-    font-size: 14rem;
+    font-size: 8rem;
     background-image: linear-gradient( #1602F9 , #00C9F5);
     background-clip: text;
     -webkit-background-clip: text;
@@ -29,7 +29,7 @@
     
 }
 .neytiri_img{
-    width: 300px;
+    width: 250px;
 }
 .neytiri{
     grid-area: neytiri;
@@ -48,7 +48,6 @@
 }
 
 .jake{
-    background-color: rgb(140, 240, 202);
     grid-area: jake;
     display: flex;
     flex-direction: row;
@@ -58,7 +57,7 @@
 }
 
 .jake_img{
-   height: 820px;
+   height: 700px;
 }
 .description_jake{
     width: 500px;
