--- a/ds1m-b/one-page-leticia/css/museu.css
+++ b/ds1m-b/one-page-leticia/css/museu.css
@@ -27,18 +27,13 @@
     font-size: 1.65rem;
     width: 80%;
     line-height: 150%;
-    /* padding-left: 10%;  */
 }
 
 .slider {
     grid-area: slider;
     display: flex;
     flex-direction: column;
-    /* margin: auto; */
-    /* margin-top: 20px; */
     gap: 32px;
-    /* align-items: center; */
-    /* position: relative; */
 }
 .slider__title{
     font-size: 40px;
@@ -61,7 +56,7 @@
     display: none;
 }
 .slider label {
-    background-color: black;
+    background-color: #fff;  
     bottom: 10px;
     cursor: pointer;
     display: block;
