--- a/ds1m-b/felipeflorencio/css/composers.css
+++ b/ds1m-b/felipeflorencio/css/composers.css
@@ -1,7 +1,7 @@
 .composers ul{
     display: flex;
     justify-content: space-between;
-    margin: 75px;
+    padding: 3rem;
     height: 75%;
 }
 .composers li{
