--- a/ds1m-b/felipeflorencio/css/home.css
+++ b/ds1m-b/felipeflorencio/css/home.css
@@ -7,8 +7,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-top: 2%;
-    margin-left: 10%;
+    justify-content: center;
     gap: 10%;
 }
 
